# s11-163

./: .gitignore  .gitlab-ci.yml  .stylish-haskell.yaml  REAME.md  bug.cabal  run-the-test.sh
lib/Bug/: Client.hs  SPA.hs  Server.hs
nix/: base.nix
run/: Client.hs  Dev.hs  Server.hs
